--- a/clase4/styles.css
+++ b/clase4/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body,
 p {
     margin: 0;
@@ -33,6 +37,11 @@ p {
     border: 1px solid #c0bfbf;
 }
 
+.HeaderBox img{
+    max-width: 100%;
+    height: auto;
+}
+
 .HeaderTopLeft, .HeaderBottomLeft{
     text-align: center;
 }
@@ -46,32 +55,40 @@ p {
     text-align: center;
 }
 
+.MainBody {
+  width: 100%;
+  min-height: 300px;
+}
+
 .LeftNavigation {
-    width: 10%;
-    float: left;
-    text-align: center;
-    background-color: #fff;
-    box-sizing: border-box;
-    min-height: 600px;
-    border: 1px solid #c0bfbf;
+  float: left;
+  width: 10%;
+  margin-left: 20px;
+  background-color: #eee;
+  border: 1px solid #c0bfbf;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .RightNavigation {
-    width: 30%;
-    float: right;
-    background-color: #fff;
-    box-sizing: border-box;
-    min-height: 600px;
-    border: 1px solid #c0bfbf;
+  float: right;
+  width: 32.5%;
+  margin-right: 13px;
+  background-color: #eee;
+  border: 1px solid #c0bfbf;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .MainContent {
-    width: 58%;
-    padding: 0 20px;
-    box-sizing: border-box;
-    margin-left: 180px;
-    margin-right: 180px;
-    background-color: #fff;
-    min-height: 600px;
+  margin: 0 33.5% 0 11.5%; /* margin-left and margin-right reserve space for side navs */
+  background-color: #fff;
+  min-height: 300px;
+  border: 1px solid #c0bfbf;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.MainContent section{
     border: 1px solid #c0bfbf;
 }
