--- a/clase6/styles.css
+++ b/clase6/styles.css
@@ -32,11 +32,19 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
-  flex-shrink: 1;
+  gap: 0.5em;
+  padding: 0.5em;
+}
+
+.HeaderBottomMid nav label{
+  flex: 0 1 auto;
+  font-size: 0.95em;
+  margin: 0.2em 0.5em;
+  white-space: nowrap;
 }
 
 .HeaderBox {
-  flex: 1;
+  flex: 1 5;
   text-align: center;
   padding: 0 1em;
   border: 1px solid #c0bfbf;
@@ -79,6 +87,8 @@ nav label {
 
 .LeftNavigation {
   width: 10%;
+  display: flex;
+  flex-direction: column;
 }
 
 .MainContent {
@@ -184,9 +194,18 @@ nav label {
 }
 
 .FooterImage {
-  width: 100%;
+  max-width: 100%;
+  height: auto;
+  display: block;
   text-align: center;
-  margin-bottom: 5em;
+  margin: 0 auto;
+}
+
+.FooterImage img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .FooterLeftColumn,
@@ -219,6 +238,21 @@ nav label {
   .Footer,
   .MainBody {
     flex-direction: column;
+    gap: 1em;
+  }
+
+  .NextNewsLeft{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: start;
+  }
+
+  .NextNewsRight{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: end;
   }
 
   .HeaderBox {
@@ -229,12 +263,12 @@ nav label {
   .RightNavigation,
   .MainContent {
     width: 100%;
+    min-height: 0;
+    height: max-content;
   }
 
-  .NextNewsPage {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  .RightNavigation {
+    min-height: 10em;
   }
 
   .FooterLeftColumn,
@@ -250,6 +284,31 @@ nav label {
   .FooterRightColumn div {
     width: 100%;
   }
+
+  .MainBody {
+    gap: 1em;
+  }
+
+  .LeftNavigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .LeftNavigation ul {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+    padding: 0;
+    margin-top: 1em;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .LeftNavigation li {
+    margin: 0;
+  }
+  
 }
 
 /* DESKTOP */
@@ -273,9 +332,14 @@ nav label {
   }
 
   .RightNavigation {
-    width: 25%;
+    width: 20%;
   }
 
+  .FooterImage {
+    flex-basis: 100%;
+    order: -1;
+    margin-bottom: 2em;
+  }
   .FooterLeftColumn {
     flex: 1;
   }
