--- a/TP-API-REST/styles.css
+++ b/TP-API-REST/styles.css
@@ -91,11 +91,22 @@ html, body{
 
 .Footer {
   margin-top: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 1;
   text-align: center;
   padding: 1em;
   background: #000;
   color: white;
   height: 30dvh;
+  overflow: hidden;
+}
+
+.Footer img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 #FooterLogo {
@@ -201,7 +212,7 @@ html, body{
   }
 
   .SideColumn {
-    display: contents; /* allow Left and Right columns to layout naturally */
+    display: contents;
   }
 
   .Filtros {
